<resources>
    <string name="app_name">IndexCardApp</string>
    <string name="no_cards_available">No cards available</string>
    <string name="your_project">Your Project</string>
    <string name="select_project">Select Project</string>
    <string name="create_new_project">Create New Project</string>
    <string name="delete_project">Delete Project</string>
    <string name="rename_project">Rename Project</string>
    <string name="option">Option</string>
    <string name="loading_please_wait">Please wait while we load…</string>
    <string name="loading_logo_desc">Penguin Logo</string>
    <string name="manage_project">Manage Project</string>
    <string name="add_card">Add Card</string>
    <string name="learn">Learn</string>
    <string name="change_projects">Change Projects</string>
    <string name="input_chinese_pinyin_hint">Enter First Language</string>
    <string name="input_english_translation_hint">Enter Second Language</string>
    <string name="add_card_button_text">Add Card</string>
    <string name="cleared_all_drawings">All drawings Deleted</string>
    <string name="error_no_project_selected">Error no project selected</string>
    <string name="back_button_text">Back</string>
    <string name="card_content">Card Content</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="toggle_paint">Paint</string>
    <string name="manage_cards">Cards</string>
    <string name="toggle_sides">Sides</string>
    <string name="flip_card">Flip Card</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="clear_all">Clear All</string>
    <string name="show_next_card">Show Next Card</string>
    <string name="non_text">Card Content</string>
    <string name="switch_visibility_text">Toggle Visibility of Drawing Canvas</string>
    <string name="switch_visibility_description">Switch to toggle visibility of the drawing canvas</string>
    <string name="switch_night_mode_text">Toggle Night Mode</string>
    <string name="switch_night_mode_description">Switch to toggle dark or night mode</string>
    <string name="back_button_description">Navigate back to the previous screen</string>
</resources>
