<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_project"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:typeface="serif"/>

    <ListView
        android:id="@+id/project_list"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"/>

    <Button
        android:id="@+id/btn_create_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_project"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_button"
        android:padding="12dp"/>

    <LinearLayout
        android:id="@+id/buttons_container_main"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="12dp">

                <Button
                    android:id="@+id/btn_select_project"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_project"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/round_button"
                    android:padding="12dp"/>

                <Button
                    android:id="@+id/btn_rename_project"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rename_project"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/round_button"
                    android:padding="12dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_delete_project"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_project"
                android:textColor="#FFFFFF"
                android:background="@drawable/round_button"
                android:padding="12dp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option"
        android:textColor="#FFFFFF"
        android:background="@drawable/round_button"
        android:padding="12dp"/>
</LinearLayout>

