<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#00000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/manage_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_project"
            android:textSize="40sp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:typeface="serif"/>

        <Button
            android:id="@+id/btn_add_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_card"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_learn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btn_change_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_projects"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:background="#00000000" />

    <!-- AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adUnitId="ca-app-pub-9458599941618884/3458930133"
        app:adSize="BANNER"
        android:layout_gravity="bottom"/>

</LinearLayout>


